[package]
name = "aleoprove"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "aleoprove"
path = "src/main.rs"

[dependencies]
benchmarking = "0.4.11"
console = "0.15.1"
nvml-wrapper = "0.8.0"
once_cell = "1.15.0"
rand = "0.8"
sysinfo = "0.26.4"

snarkvm-synthesizer = { git = "https://github.com/AleoHQ/snarkVM.git", branch = "testnet3", features = ["setup"] }

[dependencies.aleo-std]
version = "0.1.14"
optional = true
default-features = false
features = [ "cpu", "storage", "time", "timed" ]

[dependencies.snarkvm]
git = "https://github.com/AleoHQ/snarkVM.git"
branch = "testnet3"
#version = "0.9.8"
features = [
    "cuda",
    "algorithms",
    "curves",
    "fields",
    "r1cs",
    "utilities",
    "parallel",
    "synthesizer",
]

default = ["setup"]
